--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="card">
     <div class="card_body">
-      <img src="./images/image-equilibrium.jpg">
+      <img class="nft_picture" src="./images/image-equilibrium.jpg">
       <div class="card-title">
         <h1>Equilibrium #3429</h1>
         <p>Our Equilibrium collection promotes balance and calm.</p>
