--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <div class="card">
     <div class="card_body">
       <img class="nft_picture" src="./images/image-equilibrium.jpg">
       <div class="card-title">
-        <h1>Equilibrium #3429</h1>
-        <p>Our Equilibrium collection promotes balance and calm.</p>
-        <div class="eth_num">
-          <p>0.041 ETH</p>
-          <p>3 days left</p>
+        <h1 class="nft_name">Equilibrium #3429</h1>
+        <p class="nft_dec">Our Equilibrium collection promotes balance and calm.</p>
+        <div class="nft">
+          <p class="nft_price">0.041 ETH</p>
+          <div class="nft_time">
+            <img src="./images/icon-clock.svg" alt="clock">
+            <p class="nft_days">3 days left</p>
+          </div>
         </div>
       </div>
       <hr>
