finish card design

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
       <hr>
       <div class="card-foot">
-        <img src="./images/image-avatar.png" alt="author_img">
-        <p>Creation of Jules Wyvern</p>
+        <img class="author_img" src="./images/image-avatar.png" alt="author_img">
+        <p class="create">Creation of <span class="name">Jules Wyvern</span></p>
       </div>
     </div>
   </div>
