--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <h1 class="nft_name">Equilibrium #3429</h1>
         <p class="nft_dec">Our Equilibrium collection promotes balance and calm.</p>
         <div class="nft">
-          <p class="nft_price">0.041 ETH</p>
+          <div class="nft_logo_price">
+            <img class="eth_img" src="./images/icon-ethereum.svg" alt="icon_rth">
+            <p class="nft_price">0.041 ETH</p>
+          </div>
+          
           <div class="nft_time">
             <img src="./images/icon-clock.svg" alt="clock">
             <p class="nft_days">3 days left</p>
