added: alt in img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="card">
     <div class="card_body">
-      <img class="nft_picture" src="./images/image-equilibrium.jpg">
+      <img class="nft_picture" src="./images/image-equilibrium.jpg" alt="nft_pic">
       <div class="card-title">
         <h1 class="nft_name">Equilibrium #3429</h1>
         <p class="nft_dec">Our Equilibrium collection promotes balance and calm.</p>
@@ -38,6 +38,5 @@
     </div>
   </div>
 
-  
 </body>
 </html>
