--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
   <div class="card">
     <div class="card_body">
-      <img class="nft_picture" src="./images/image-equilibrium.jpg" alt="nft_pic">
+      <img class="nft_picture" src="./images/image-equilibrium.jpg" alt="nft_pic"/>
+      <img class="eth_img_overlay" src="./images/icon-view.svg" alt="rth_img_cover"/>
       <div class="card-title">
         <h1 class="nft_name">Equilibrium #3429</h1>
         <p class="nft_dec">Our Equilibrium collection promotes balance and calm.</p>
@@ -30,7 +31,7 @@
           </div>
         </div>
       </div>
-      <hr>
+      <hr/>
       <div class="card-foot">
         <img class="author_img" src="./images/image-avatar.png" alt="author_img">
         <p class="create">Creation of <span class="name">Jules Wyvern</span></p>
