modified: img hover

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 <body>
   <div class="card">
     <div class="card_body">
-      <img class="nft_picture" src="./images/image-equilibrium.jpg" alt="nft_pic"/>
-      <img class="eth_img_overlay" src="./images/icon-view.svg" alt="rth_img_cover"/>
+      <div class="img_container">
+        <img class="nft_picture" src="./images/image-equilibrium.jpg" alt="nft_pic"/>
+      </div>
+      <div class="img_container_overlay">
+        <img class="eth_img_overlay" src="./images/icon-view.svg" alt="rth_img_cover"/>
+      </div>
       <div class="card-title">
         <h1 class="nft_name">Equilibrium #3429</h1>
         <p class="nft_dec">Our Equilibrium collection promotes balance and calm.</p>
